# luajit

./: .gitignore  CMakeLists.txt  main.lua  run_with_gdb.sh
.github/actions/setup-linux/: action.yml
.github/workflows/: coverage.yml  lint.yml
cmake/: CodeCoverage.cmake  CodeSpell.cmake  FindLibUnwind.cmake  SetTargetFlags.cmake
src/: CMakeLists.txt  Makefile.dep.original  Makefile.original  lj_alloc.c  lj_bcread.c  lj_dispatch.c  lj_ir.h  lj_lex.c  lj_memprof.c  lj_obj.h  lj_opt_mem.c  lj_record.c  lj_snap.c  lj_sysprof.c  lj_sysprof.h  luajit-gdb.py  luajit_dbg.py  vm_x64.dasc  vm_x86.dasc
src/host/: CMakeLists.txt
src/jit/: bcsave.lua
test/: CMakeLists.txt
test/LuaJIT-tests/: CMakeLists.txt
test/PUC-Rio-Lua-5.1-tests/: CMakeLists.txt  gc.lua
test/lua-Harness-tests/: CMakeLists.txt
test/tarantool-c-tests/: ASAN-mmap-instr.test.c  ASAN_malloc_realloc_free.test.c  CMakeLists.txt  asan-dlmalloc.test.c  asan-mmap.test.c  asan.test.c  asan_dlmalloc.test.c  asan_xmap.test.c  lj-549-lua-load.test.c  lj-881-fix-lua-concat.test.c  test.h
test/tarantool-debugger-tests/: CMakeLists.txt  config.py  luajit_dbg.test.md  run.py  test_base.py
test/tarantool-tests/: CMakeLists.txt  fix-mips64-spare-side-exit-patching.test.lua  gh-5688-tool-cli-flag.test.lua  gh-6163-min-max.test.lua  gh-7264-add-proto-trace-sysprof-default.test.lua  gh-8594-sysprof-ffunc-crash.test.lua  lj-1031-asm-head-side-base-reg.test.lua  lj-1046-fix-bc-varg-recording.test.lua  lj-1051-snap-unsink-irfl-nomm.test.lua  lj-1066-fix-cur_L-after-coroutine-resume.test.lua  lj-362-mips64-href-delay-slot-side-exit.test.lua  lj-549-bytecode-loader.test.lua  lj-603-err-snap-restore.test.lua  lj-611-always-snapshot-functions-for-non-base-frames-1.test.lua  lj-611-always-snapshot-functions-for-non-base-frames.test.lua  lj-684-pow-inconsistencies.test.lua  lj-704-bc-varg-use-def.test.lua  lj-812-too-long-string-separator.test.lua  lj-9-pow-inconsistencies.test.lua  lj-noticket-tdup-load-fwd-mismatch.test.lua  lj-noticket-tdup-tnew-load-fwd.test.lua  lj-noticket-tsetm-recording.test.lua  lj-noticket-varg-usedef.test.lua  mark-conv-non-weak.test.lua  misclib-memprof-lapi.test.lua  misclib-sysprof-capi.test.lua  misclib-sysprof-lapi.test.lua  utils.lua
test/tarantool-tests/ASAN-left-memory-miss/: script.lua
test/tarantool-tests/ASAN-use-after-free/: script.lua
test/tarantool-tests/asan-left-memory-miss/: script.lua
test/tarantool-tests/asan-right-memory-miss/: script.lua
test/tarantool-tests/asan-use-after-free/: script.lua
test/tarantool-tests/lj-1066-fix-cur_L-after-coroutine-resume/: libcur_L_coroutine.c
test/tarantool-tests/misclib-sysprof-capi/: testsysprof.c
test/tarantool-tests/utils/: tools.lua
test/tarantool-tests/utils/jit/: generators.lua
tools/: CMakeLists.txt  codespell-ignore-words.txt  sysprof.lua
tools/sysprof/: parse.lua
tools/utils/: avl.lua  symtab.lua
